--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <svg height="40" width="150" xmlns="http://www.w3.org/2000/svg">
                                   <rect id="shape" height="40" width="150" />
                                   <div id="text">
-                                    <a href="#"><span class="spot"></span>View My Work</a>
+                                    <a href="https://github.com/Saadtareksaleh"><span class="spot"></span>View My Work</a>
                                   </div>
                                 </svg>
                             </div>
