--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="navbar" class="stroke navbar sticky-top bg-white navbar-light navbar-expand-md py-3">
         <div class="container">
             <img class="logo" src="images/logo.jpg" alt="Team Logo">
-            <p style="position: relative; top: 10px; left: 5px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: x-large;">Web Services</p>
+            <p style="position: relative; top: 10px; left: 5px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: x-large;"></p>
             <!-- <a class="logo navbar-brand d-flex align-items-center" href="#"><span>Ss Team Logo</span></a> -->
             <button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-3"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-3">
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="#ourTeam">Start</a></li>
                 </ul>
-                <a class="btn contactBtn" href="#contact">Contact Us <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+                <a class="btn contactBtn" href="#contact">Contact Me <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
                   </svg></a>
             </div>
@@ -85,7 +85,7 @@
                 <h2 style="text-align: left;"><br></h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row gy-4  box-container">
             <div class="col-lg-6 col-md-6">
                 <div class="card">
                     <div class="card-body p-4" style="background: #0b0d46;">
