--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="container py-4 py-xl-5" style="background: #0b0d46;">
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
-                    <h1 style="color: white;font-size: 15px;">What We can do?</h1>
+                    <h1 style="color: white;font-size: 15px;">What I can do?</h1>
                     <p style="color: black;font-size: 44px;"><span style="color: rgb(255, 255, 255);">Skills &amp; Proficiencies</span></p>
                     <br>
                     <div class="tab">
